--- a/assets/css/form-style.css
+++ b/assets/css/form-style.css
@@ -40,7 +40,7 @@ form .contentBox .contentInput::placeholder {
     color: var(--cor-secundaria);
 }
 
-form button {
+button {
     color: white;
     background-color: #121212;
     border-color: #1ed760;
@@ -52,7 +52,7 @@ form button {
     font-size: 12.5px;
 }
 
-form button:hover {
+button:hover {
     color: #1ed760;
     transition: 0.3s ease;
 }
