--- a/assets/css/users-style.css
+++ b/assets/css/users-style.css
@@ -1,7 +1,15 @@
-.users {
+
+
+
+
+.user {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: var(--cor-terciaria);
+    margin: 25px;
+    padding: 25px;
+    border-radius: 25px;
 }
 
 .user {
