--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -16,9 +16,39 @@
     --fonte-primaria: "Inter", Arial, sans-serif;
 }
 
+.container {
+    height: calc(100vh - 75px);
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+.justify-evenly {
+    justify-content: space-evenly;
+}
+
 .royalacid{
     font-family: 'RoyalAcid', sans-serif !important;
     font-weight: 100 !important;
+}
+
+.txt-center {
+    text-align: center;
+}
+
+.vw-small{
+    font-size: 2vw;
+}
+
+.vw-regular{
+    font-size: 3vw;
 }
 
 .vw-big{
@@ -26,7 +56,7 @@
 }
 
 .vw-bigger{
-    font-size: 10vw;
+    font-size:5vw;
 }
 
 .thin {
@@ -42,12 +72,13 @@
 }
 
 .box {
-    border: var(--cor-terciaria) solid;
     border-radius: 3em;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
+    padding: 2em;
 }
 
-.pd-lr {
-    margin: 0 1em;
+.mg-lr {
+    margin: 0 5em;
 }
 
 .primary {
@@ -241,8 +272,9 @@ footer {
 }
 
 footer .footer-logo {
-    padding-top: 30px;
+    padding: 30px 0;
     width: 200px;
+    width: auto;
 }
 
 footer nav ul {
@@ -365,4 +397,81 @@ button {
 button:hover {
     color: #1ed760;
     transition: 0.3s ease;
+}
+
+
+
+.container2 {
+  background-color: red;
+}
+
+.container3 {
+  height: 33vh;
+  background-color: white;
+}
+
+.container4 {
+  height: 33vh;
+  background-color: blue;
+}
+
+
+.choices {
+  background-color: transparent !important;
+  color: green !important;
+}
+
+/* ===== CHOICES.JS =====*/
+.choices {
+  border: 0;
+  background-color: RED;
+}
+
+.choices__inner {
+  background-color: transparent;
+  border: 0;
+}
+
+.choices__input {
+  color: #333;
+  background: transparent;
+  font-family: var(--fonte-primaria);
+
+}
+
+.choices__list--dropdown {
+  background-color: #fff;
+}
+
+.choices__item--selectable {
+  color: var(--cor-secundaria);
+}
+
+.choices__item--selected {
+  background-color: red;
+  color: red;
+}
+
+.choices__placeholder {
+  color: red;
+}
+
+.choices__list--multiple .choices__item {
+  background-color: var(--cor-primaria);
+  color: var(--cor-preto);
+  font-weight: 600;
+  border: 0;
+}
+
+.choices__list--dropdown, .choices__list[aria-expanded] {
+  border: 0;
+  background-color: var(--cor-preto);
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
+}
+
+.is-highlighted {
+  background-color: var(--cor-primaria);
+  color: var(--cor-preto);
+  border: 0;
 }
