--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -6,6 +6,10 @@
     font-weight: 100;
 }
 
+
+
+
+
 /* Variáveis globais */
 :root {
     --cor-primaria: #1ed760;
@@ -16,6 +20,11 @@
     --fonte-primaria: "Inter", Arial, sans-serif;
 }
 
+
+
+
+
+/* Bootstrap 2 */
 .container {
     height: calc(100vh - 75px);
 }
@@ -89,6 +98,10 @@
     color: var(--cor-secundaria);
 }
 
+
+
+
+
 /* Estilos globais */
 * {
     margin: 0;
@@ -98,10 +111,18 @@
     font-family: var(--fonte-primaria);
 }
 
+
+
+
+
 /* Estilos gerais */
 body {
     background-color: var(--cor-preto);
 }
+
+
+
+
 
 /* Cabeçalho */
 header {
@@ -146,23 +167,13 @@ header nav ul li a:hover {
     transition: 0.3s ease;
 }
 
-header .menu {
-    display: flex;
-    background-color: var(--cor-secundaria);
-    padding: 10px;
+#null {
+    color: rgb(75, 75, 75) ;
 }
 
-
-
-
-
-#profileMenu {
-    display: none;
-    /* restante do seu CSS */
+#null:hover {
+    font-weight: 300 !important;
 }
-
-
-
 
 
 /* TODO START */
@@ -200,13 +211,89 @@ header .searchBox .searchInput::placeholder {
     color: rgba(0, 0, 0, 0.25);
 }
 
-#null {
-    color: rgb(75, 75, 75) ;
+.sub-menu-wrap {
+    position: absolute;
+    top: 100%;
+    right: 10%;
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
 }
 
-#null:hover {
-    font-weight: 300 !important;
+.sub-menu-wrap.active {
+    max-height: 500px;
 }
+
+.sub-menu {
+    background: var(--cor-terciaria);
+    border-radius: 1em;
+    padding: 1em 2em;
+    margin: 10px;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info h3 {
+    font-weight: 800;
+    padding: .5em 0 .75em;
+    margin: 0 auto;
+    font-size: 1.5em;
+}
+
+.sub-menu hr {
+    border: 0;
+    height: 1px;
+    width: 100%;
+    background: #ccc;
+}
+
+.sub-menu-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #525252;
+    margin: 15px 0;
+}
+
+.sub-menu-link p {
+    width: 100%;
+    transition: .3s ease;
+}
+
+.sub-menu-link:hover p {
+    color: var(--cor-primaria);
+    transition: .3s ease;
+}
+
+.sub-menu-link i {
+    width: 40px;
+    color: var(--cor-preto);
+    background: var(--cor-secundaria);
+    border-radius: 50%;
+    padding: 8px;
+    margin-right: 15px;
+    transition: .3s ease;
+}
+
+.sub-menu-link:hover i {
+    background: var(--cor-primaria);
+    transition: .3s ease;
+}
+
+.sub-menu-link span {
+    color: var(--cor-branco);
+    transform: .3s ease;
+}
+
+.sub-menu-link:hover span {
+    font-weight: 800;
+    transition: .3s ease;
+}
+
 
 @media screen and (max-width: 1279px) {
     header .searchBox {
@@ -252,12 +339,20 @@ header .searchBox .searchInput::placeholder {
 
 /* TODO END */
 
+
+
+
+
 /* Conteúdo principal */
 main {
     padding-top: 75px;
     background-color: var(--cor-preto);
     margin: 0 auto;
 }
+
+
+
+
 
 /* Rodapé */
 footer {
@@ -301,6 +396,10 @@ footer nav ul li a:hover {
     transition: 0.3s ease;
 }
 
+
+
+
+
 /* Media Queries */
 @media screen and (min-width: 769px) and (max-width: 1279px) {
 
@@ -329,6 +428,10 @@ footer nav ul li a:hover {
 
 }
 
+
+
+
+
 /* ===== SCROLLBAR =====*/
 ::-webkit-scrollbar {
     width: 7px;
@@ -339,11 +442,19 @@ footer nav ul li a:hover {
     border-radius: 100px;
 }
   
+
+
+
+
 /* ===== SELECTION =====*/
 ::selection {
     color: var(--cor-branco);
     background: var(--cor-terciaria);
 }
+
+
+
+
 
 /* ===== FORM =====*/
 form {
@@ -381,8 +492,12 @@ form .contentBox .contentInput::placeholder {
     transition: 0.3s ease;
 }
 
+
+
+
+
 /* ===== BUTTON =====*/
-button {
+.button1 {
     color: white;
     background-color: #121212;
     border-color: #1ed760;
@@ -394,9 +509,27 @@ button {
     font-size: 12.5px;
 }
 
-button:hover {
+.button1:hover {
     color: #1ed760;
     transition: 0.3s ease;
+}
+
+.button2 {
+    color: var(--cor-preto);
+    background-color: var(--cor-primaria);
+    border: 0;
+    padding: 0.5em 1em;
+    border-radius: 2em;
+    transition: 0.25s;
+    font-weight: 800;
+    font-size: 12.5px;
+}
+
+.button2:hover {
+    color: var(--cor-primaria);
+    background-color: var(--cor-preto);
+    transition: 0.3s ease;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -416,15 +549,13 @@ button:hover {
 }
 
 
-.choices {
-  background-color: transparent !important;
-  color: green !important;
-}
+
+
 
 /* ===== CHOICES.JS =====*/
 .choices {
   border: 0;
-  background-color: RED;
+  background-color: transparent;
 }
 
 .choices__inner {
@@ -474,4 +605,30 @@ button:hover {
   background-color: var(--cor-primaria);
   color: var(--cor-preto);
   border: 0;
+}
+
+
+
+
+.notification {
+    display: flex;
+    background-color: var(--cor-preto);
+    border-radius: .5em;
+    padding: .5em 1em;
+    margin-bottom: 5px;
+}
+
+.notificationContainer {
+    padding: 1em 0;
+}
+
+.notification .content {
+    font-size: .75em;
+    align-self: center;
+    min-width: none;
+    max-width: 17em;
+}
+
+.notification button {
+    margin-left: 1em;
 }
