--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -80,14 +80,26 @@
     padding-top: 10vh;
 }
 
-.box {
-    border-radius: 3em;
-    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
-    padding: 2em;
-}
-
 .mg-lr {
     margin: 0 5em;
+}
+
+.mg-bot {
+    margin-bottom: 2.5vh;
+}
+
+.box {
+    border-radius: 1.75em;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
+    padding: 2em;
+    background-color: var(--cor-terciaria);
+}
+
+.black-box {
+    border-radius: 1em;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
+    padding: 0.75em 1em;
+    background-color: var(--cor-preto);
 }
 
 .primary {
@@ -209,6 +221,30 @@ header .searchBox .searchInput {
 
 header .searchBox .searchInput::placeholder {
     color: rgba(0, 0, 0, 0.25);
+}
+
+.user-content {
+    display: flex;
+}
+
+.navbox {
+    display: flex;
+    border-radius: 1em;
+    box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
+    padding: 0.75em 1em;
+    background-color: var(--cor-preto);
+}
+.notify{
+    margin-left: 2em;
+}
+
+.user{
+    margin-left: 1em;
+}
+
+.user i {
+    margin-left: .5em;
+    align-items: center;
 }
 
 .sub-menu-wrap {
@@ -466,7 +502,7 @@ form {
 form .contentBox {
     padding: 5px 10px;
     border-radius: 28px;
-    background: #242424;
+    background: var(--cor-preto);
     transition: background 0.25s;
     margin-bottom: 15px;
 }
