--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -92,7 +92,6 @@
     border-radius: 1.75em;
     box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 0.5);
     padding: 2em;
-    background-color: var(--cor-terciaria);
 }
 
 .black-box {
@@ -502,7 +501,7 @@ form {
 form .contentBox {
     padding: 5px 10px;
     border-radius: 28px;
-    background: var(--cor-preto);
+    background: var(--cor-terciaria);
     transition: background 0.25s;
     margin-bottom: 15px;
 }
